# Dhara-Ai

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  env.py  grader.py  models.py  scenarios.py
